fix scroll on mobile nav

--- a/src/assets/sass/_vars.scss
+++ b/src/assets/sass/_vars.scss
@@ -13,5 +13,6 @@ $bp-small: 700px;
 
 :root {
     --header-inner: 0px;
+    --mobile-nav: 0px;
     --main-top: 0px;
 }
